--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,16 @@
       <version>${jettyVersion}</version>
     </dependency>
     <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>${jettyVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-security</artifactId>
+      <version>${jettyVersion}</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>2.0.0</version>
@@ -21,6 +31,16 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.9</version>
+    </dependency>
+    <dependency>
+      <groupId>net.handle</groupId>
+      <artifactId>cnriutil</artifactId>
+      <version>1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.handle</groupId>
+      <artifactId>handle</artifactId>
+      <version>1</version>
     </dependency>
   </dependencies>
   <properties>
