--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
   <groupId>de.dkrz.infra.pid.handle.rest</groupId>
   <artifactId>handle-rest</artifactId>
   <name>handle-rest</name>
+  <packaging>war</packaging>
   <version>0.1</version>
-  <url>http://maven.apache.org</url>
+  <url>http://www.dkrz.de</url>
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -90,6 +91,15 @@
         </configuration>
         
       </plugin>
+      <!-- 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+        </configuration>
+      </plugin>  -->
+      
     </plugins>
   </build>
 </project>
