--- a/pom.xml
+++ b/pom.xml
@@ -91,14 +91,19 @@
         </configuration>
         
       </plugin>
-      <!-- 
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.2</version>
         <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+            </manifest>
+          </archive>
         </configuration>
-      </plugin>  -->
+      </plugin> 
       
     </plugins>
   </build>
