--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
  
      <servlet-mapping>
          <servlet-name>HandleSystemEndpointServlet</servlet-name>
-         <url-pattern>/</url-pattern>
+         <url-pattern>/*</url-pattern>
      </servlet-mapping>
 
  </web-app>
