HTTP Authentication enabled

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
               <addClasspath>true</addClasspath>
             </manifest>
           </archive>
+          <webXml>web.xml</webXml>
         </configuration>
       </plugin> 
       
