--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
 log4j.rootLogger=DEBUG, A 
 log4j.appender.A=org.apache.log4j.ConsoleAppender 
 log4j.appender.A.layout=org.apache.log4j.PatternLayout 
-log4j.appender.A.layout.ConversionPattern=%-4r [%t] %-5p %c %x – %m%n
+log4j.appender.A.layout.ConversionPattern=%d{yyyy/MM/dd HH:mm:ss,SSS} [%t] %-5p %c - %m%n
