Base work for content negotiation switch and setup of HTML templating

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
       <artifactId>handle</artifactId>
       <version>1</version>
     </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <!-- Latest 2.3.x (not 2.4.x), at least 2.3.19 -->
+      <version>[2.3.19,2.4]</version>
+    </dependency>
   </dependencies>
   
   <properties>
