--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.2</version>
         <configuration>
+		  <path>/handle</path>
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
